Bug 498468 - When multiple instances of Haruna are open, all of them share the (possibly frozen) Task Manager window preview and Media Player controls from the first one opened
Summary: When multiple instances of Haruna are open, all of them share the (possibly f...
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 1.2.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
: 498469 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-01-10 12:29 UTC by Fernando Marcelino Muniz
Modified: 2025-08-14 10:31 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fernando Marcelino Muniz 2025-01-10 12:29:21 UTC
1. Have two or more videos on Haruna.
2. Look at these players with window preview.
3. Press space to play the video.

Result:
Haruna shows in the window preview that both videos are playing at the same time, while in reality you just start playing the video that was focused.
Comment 1 John Kizer 2025-01-14 07:29:36 UTC
I can reproduce on Fedora KDE 41.
Comment 2 John Kizer 2025-01-14 07:30:13 UTC
*** Bug 498469 has been marked as a duplicate of this bug. ***
Comment 3 Fernando Marcelino Muniz 2025-05-08 11:01:08 UTC
I've noticed that when the video repeats, the window preview properly shows the video in real time for I'd say 3 frames, then it freezes again.
Comment 4 george fb 2025-08-14 10:28:28 UTC
Git commit 37550ef34e29ca0cc078be4a8759ec740f473750 by George Florea Bănuș.
Committed on 14/08/2025 at 10:22.
Pushed by georgefb into branch 'master'.

mpris2: only set thumbnail for audio files

now for video files the window preview in task manager
will show the app window instead of the thumbnail

M  +6    -1    src/mpris2/mediaplayer2player.cpp

https://invent.kde.org/multimedia/haruna/-/commit/37550ef34e29ca0cc078be4a8759ec740f473750
Comment 5 george fb 2025-08-14 10:31:03 UTC
The controls only working on one instance is a Plasma thing https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2719