mpris2: only set thumbnail for audio files

now for video files the window preview in task manager
will show the app window instead of the thumbnail

BUG: 498468